--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "jest --watchAll",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -15,20 +16,29 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.7.0",
-    "axios": "^1.2.3",
-    "react-lazy-load-image-component": "^1.5.6"
+    "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@vitejs/plugin-react": "^3.0.0",
+    "babel-jest": "^29.4.0",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "@types/react-lazy-load-image-component": "^1.5.2"
+    "vite": "^4.0.0"
   }
 }
