--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@features*": ["src/features*"],
       "@assets*": ["src/assets*"],
       "@config*": ["src/config*"],
+      "@common*": ["src/common*"],
     }
   },
   "include": ["src"],
